--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/collage_app
+spring.datasource.url= jdbc:mysql://localhost:3306/college_app
 spring.datasource.username=root
 spring.datasource.password=root
 
